[2015-09-xx]
Version 0.7.2 UNRELEASED

[2015-09-06]
Version 0.7.1

- Bug fixes:

  * Fix for wrong reported size of deleted files with 'autoclean' on 32-bit
    arches (Closes: #499872)

  * Be explicit when packages are already installed, cannot be removed/purged
    because they are not installed, and similar (Closes: #421469).

    It was changed to work in this way a few years ago in #258913 due to the
    installer, and required to pass verbose flag to print these messages, but
    this was caused at least 3 bug reports (merged) to be explicit, and aptitude
    prints many other messages even ignoring these lines.  It can be made to be
    quiet with another flag, if needed.

  * Check string formats for columns in both curses and command line interface,
    and forbid characters which can lead to cwidget assertions and program
    crashes.  These strings can be specified in the the command line for
    "search" or "versions" with -F or configuration options (and they can be
    made permanent by mistake, causing crashes upon start, as the bug reports
    prove). (Closes: #497129, #532662).

- Documentation:

  * Quick help (help.txt):

    * Document 'l' (Limit Display) in quick help (Closes: #514541)

    * Improve description of '_' (Purge) (Closes: #495326)

    * Improve the description of the search shortcut, and point more clearly to
      search patterns in the full documentation

  * man page:

    * Fix example of '-F' with current and candidate versions (Closes: #752517)

  * Guide/User's Manual:

    * Upgrade doc/??/aptitude.xml documents from DocBook XML 4.2 to 4.5

    * Use XHTML 1.0 rather than HTML 4.01, at least to have something from this
      decade/century.  The resulting documentation still does not fully validate
      (see #496724), I think that due to bugs/problems of docbook-xsl
      conversions using invalid elements in the different standards (tried HTML
      4.0, 4.01, XHTML 1.0 and 1.1).
