@@ -1,6 +1,11 @@
 [2015-09-xx]
 Version 0.7.2 UNRELEASED
 
+- Bug fixes:
+
+  * Disable strings gathered for translation (Closes: #790568)
+
+
 [2015-09-06]
 Version 0.7.1
 
